--- a/css/styles.css
+++ b/css/styles.css
@@ -743,6 +743,79 @@ body {
   letter-spacing: 0.03em;
   color: var(--third-title-color);
 }
+.footer-follow-sub {
+  margin-left: 93px;
+}
+.footer-follow-title {
+  color: var(--main-btn-color);
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.form-follow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form-follow-form {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.form-input-label {
+  letter-spacing: 0.01em;
+  color: var(--third-title-color);
+  margin-bottom: 4px;
+  display: block;
+}
+.footer-form-input {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 15px 16px;
+  color: var(--main-title-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-form-input:hover,
+.footer-form-input:focus {
+  border-color: var(--accent-color);
+}
+.footer-form-input:hover::placeholder,
+.footer-form-input:focus::placeholder {
+  color: var(--main-title-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-follow-btn {
+  color: var(--main-btn-color);
+  background-color: var(--btn-background-color);
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  text-align: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-left: 12px;
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.follow-sub-icon {
+  margin-left: 10px;
+  fill: currentColor;
+}
 /*-------------------------------ПОРТФОЛИО -проджек-------------------------------*/
 
 .project-thumb {
@@ -816,6 +889,7 @@ body {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   position: absolute;
+  padding: 40px;
   top: 50%;
   left: 50%;
   transform: scale(1) rotate(0);
@@ -847,4 +921,80 @@ body {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
+}
+.modal-title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--footer-nolight-color);
+  margin-bottom: 12px;
+}
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding-left: 42px;
+  padding-right: 10px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input::placeholder {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal-form-input:focus {
+  border-color: var(--accent-color);
+  fill: var(--accent-color);
+}
+.modal-form-input:focus {
+  border-color: var(--accent-color);
+}
+.modal-form-input:hover + .input-icon,
+.modal-form-input:focus + .input-icon {
+  fill: var(--accent-color);
+}
+.input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+.modal-form-text {
+  display: block;
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  resize: none;
+  padding: 12px 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-field {
+  margin-bottom: 20px;
+}
+.modal-field-check {
+  margin-bottom: 30px;
+}
+.form-input-label {
+  letter-spacing: 0.01em;
+  color: var(--third-title-color);
+  margin-bottom: 4px;
+  display: block;
+}
+.input-warp {
+  position: relative;
 }
