--- a/css/styles.css
+++ b/css/styles.css
@@ -884,7 +884,7 @@ body {
 .modal {
   width: 528px;
   min-height: 581px;
-  background-color: var(--backgroud-color);
+  background-color: var(--main-title-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -997,4 +997,33 @@ body {
 }
 .input-warp {
   position: relative;
+}
+.check-item {
+  display: block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid rgba(21, 21, 21);
+  border-radius: 2px;
+  margin-right: 5px;
+}
+.check-icon {
+  width: 100%;
+  height: 100%;
+  fill: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-check:checked + .check-text .check-item {
+  background-color: var(--accent-color);
+  border: none;
+}
+.check-text {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
