--- a/css/styles.css
+++ b/css/styles.css
@@ -1044,4 +1044,15 @@ body {
   border-radius: 4px;
   box-sizing: border-box;
   border: 0px solid transparent;
+  width: 200px;
+}
+.policy-link {
+  text-decoration-line: underline;
+  color: var(--accent-color);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+.checkbox-text {
+  margin-right: 5px;
 }
